# DFOS-Element-Tests

./: .gitignore  README.md  context.md  pyproject.toml  requirements-colab.txt  requirements.txt
docs/: DEVELOPER.md  Makefile  README.md  conf.py
docs/source/: api.rst  index.rst
notebooks/: colab_quickstart.ipynb
params/: case_list.yml  common.yml  compare_groups.yml  interval_settings.yml
scripts/: plot_rmse_vs_window.py
src/: __init__.py  cli.py  config.py  converter.py  data_loader.py  evaluator.py  exceptions.py  logger.py  reporter.py  theory.py  types.py
tests/: conftest.py  test_cli.py  test_config.py  test_converter.py  test_data_loader.py  test_error_handling.py  test_evaluator.py  test_integration.py  test_logger.py  test_reporter.py  test_theory.py
tests/fixtures/: sample.csv
